--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,10 @@ abstract: 'PSGI application to implement Riap::HTTP'
 author:
   - 'Steven Haryanto <stevenharyanto@gmail.com>'
 build_requires:
+  JSON: 0
   Module::Build: 0.3601
+  Perinci::Examples: 0
+  Test::More: 0.96
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
@@ -14,25 +17,24 @@ meta-spec:
   version: 1.4
 name: Perinci-Access-HTTP-Server
 requires:
+  File::HomeDir: 0
   Gepok: 0
-  JSON: 0
   Log::Any::Adapter: 0
   Log::Any::Adapter::Callback: 0.03
   Log::Any::App: 0
   Module::List: 0
   Perinci::Access: 0.10
+  Perinci::Access::InProcess: 0.19
   Perinci::CmdLine: 0
-  Perinci::Examples: 0
   Perinci::Gen::ForModule: 0
   Perinci::Result::Format: 0.12
   Perinci::Sub::GetArgs::Array: 0
   Perinci::Sub::property::result_postfilter: 0
   Perinci::Sub::property::timeout: 0
   Plack: 0
-  Riap: 1.1.8
+  Riap: 1.1.10
   SHARYANTO::Array::Util: 0
   Starman: 0
-  Test::More: 0.96
   URI: 0
   URI::Escape: 0
   YAML::Syck: 0
@@ -40,4 +42,4 @@ requires:
 resources:
   homepage: http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
   repository: http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
-version: 0.14
+version: 0.15
