--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
+version=0.15
+
 name=Perinci-Access-HTTP-Server
-version=0.14
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
@@ -8,44 +9,24 @@ copyright_holder=Steven Haryanto
 homepage=http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
 repository=http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
 
-[@Filter]
-bundle=@Classic
-remove=MakeMaker
-remove=PodVersion
-remove=PkgVersion
+[@SHARYANTO]
 
-[OurPkgVersion]
-
-[ModuleBuild]
-
-[ReadmeFromPod]
-
-[PodWeaver]
-
-[CheckChangeLog]
-
-[Test::Compile]
-
-[InstallRelease]
-install_command=cpanm -n .
-
-;[@Git]
-[Prereqs]
-;spec
-Riap=1.1.8
-
-;testing
+[Prereqs/ TestRequires]
 JSON=0
 Perinci::Examples=0
 Test::More=0.96
 
-;runtime
+[Prereqs]
+;spec
+Riap=1.1.10
+
 perl=5.010001
 Plack=0
 SHARYANTO::Array::Util=0
 
 ;;for middleware PeriAHS::ParseRequest
 Perinci::Access=0.10
+Perinci::Access::InProcess=0.19
 Perinci::Sub::GetArgs::Array=0
 Perinci::Sub::property::result_postfilter=0
 Perinci::Sub::property::timeout=0
@@ -65,13 +46,10 @@ Perinci::Result::Format=0.12
 ;;for middleware PeriAHS::LogAccess
 
 ;;for peri-htserve script
+File::HomeDir=0
 Gepok=0
 Log::Any::App=0
 Module::List=0
 Perinci::CmdLine=0
 Perinci::Gen::ForModule=0
 Starman=0
-
-[Run::Release]
-;notexist_fatal = 0
-run=archive-perl-release %s
