--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.19
+version=0.20
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -29,7 +29,6 @@ SHARYANTO::Array::Util=0
 Perinci::Access=0.10
 Perinci::Access::InProcess=0.19
 Perinci::Sub::GetArgs::Array=0
-Perinci::Sub::property::result_postfilter=0
 Perinci::Sub::property::timeout=0
 YAML::Syck=0
 URI::Escape=0
@@ -38,6 +37,7 @@ URI::Escape=0
 URI=0
 
 ;;for middleware PeriAHS::Respond
+Data::Clean::JSON=0
 Log::Any::Adapter=0
 Log::Any::Adapter::Callback=0.03
 Perinci::Result::Format=0.12
