--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,6 @@ author:
 build_requires:
   JSON: 0
   Module::Build: 0.3601
-  Perinci::Examples: 0
   Test::More: 0.96
 configure_requires:
   Module::Build: 0.3601
@@ -20,9 +19,9 @@ requires:
   Data::Clean::JSON: 0
   File::HomeDir: 0
   Gepok: 0
+  Log::Any: 0
   Log::Any::Adapter: 0
   Log::Any::Adapter::Callback: 0.03
-  Log::Any::App: 0
   Module::List: 0
   Module::Patch: 0.10
   Perinci::Access: 0.10
@@ -31,9 +30,8 @@ requires:
   Perinci::Gen::ForModule: 0
   Perinci::Result::Format: 0.12
   Perinci::Sub::GetArgs::Array: 0
-  Perinci::Sub::property::timeout: 0
-  Plack: 0
-  Riap: 1.1.10
+  Plack::Runner: 0
+  Riap: v1.1.10
   SHARYANTO::Array::Util: 0
   Starman: 0
   URI: 0
@@ -43,4 +41,4 @@ requires:
 resources:
   homepage: http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
   repository: http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
-version: 0.20
+version: 0.21
