--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.21
+version=0.22
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -20,7 +20,7 @@ Test::More=0.96
 Riap=1.1.10
 
 perl=5.010001
-Module::Patch=0.10
+Module::Patch=0.12
 Log::Any=0
 SHARYANTO::Array::Util=0
 
@@ -55,8 +55,13 @@ Module::List=0
 Plack::Runner=0
 Perinci::CmdLine=0
 Perinci::Gen::ForModule=0
+;Perinci::Sub::To::ReForm=0
+;ReForm::HTML=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs, used via Plack::Runner
 Starman=0
+
+;; for examples/ scripts
+Perinci::Examples=0
 
 [Extras / lint-prereqs / assume-provided]
 ; all in Plack dist
@@ -66,3 +71,7 @@ Plack::Builder=0
 Plack::Util::Accessor=0
 Plack::Util=0
 Plack::Middleware=0
+
+; disabled temporarily (unfinished)
+Perinci::Sub::To::ReForm=0
+ReForm::HTML=0
