Import of SHARYANTO/Perinci-Access-HTTP-Server-0.25 from CPAN.
gitpan-cpan-distribution: Perinci-Access-HTTP-Server
gitpan-cpan-version:      0.25
gitpan-cpan-path:         SHARYANTO/Perinci-Access-HTTP-Server-0.25.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -18,6 +18,7 @@ name: Perinci-Access-HTTP-Server
 requires:
   Data::Clean::JSON: 0
   File::HomeDir: 0
+  File::Write::Rotate: 0
   Gepok: 0
   Log::Any: 0
   Log::Any::Adapter: 0
@@ -42,4 +43,4 @@ requires:
 resources:
   homepage: http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
   repository: http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
-version: 0.24
+version: 0.25
