--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.24
+version=0.25
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -49,6 +49,7 @@ Perinci::Result::Format=0.30
 
 ;;for peri-htserve script
 File::HomeDir=0
+File::Write::Rotate=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs, used via Plack::Runner
 Gepok=0
 Module::List=0
