--- a/META.yml
+++ b/META.yml
@@ -26,6 +26,7 @@ requires:
   Module::List: 0
   Module::Patch: 0.12
   Perinci::Access: 0.10
+  Perinci::Access::HTTP::Client: 0.07
   Perinci::Access::InProcess: 0.19
   Perinci::CmdLine: 0
   Perinci::Examples: 0
@@ -43,4 +44,4 @@ requires:
 resources:
   homepage: http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
   repository: http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
-version: 0.26
+version: 0.27
