--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.26
+version=0.27
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -63,6 +63,9 @@ Starman=0
 
 ;; for examples/ scripts
 Perinci::Examples=0
+
+;!lint-prereqs assume-used # force client version, since chunking protocol is different in 0.27+ (chunk types 'l' & 'r' replace 'L' and 'R')
+Perinci::Access::HTTP::Client=0.07
 
 [Extras / lint-prereqs / assume-provided]
 ; all in Plack dist
