--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,6 +32,7 @@ requires:
   Perinci::Gen::ForModule: 0
   Perinci::Result::Format: 0.31
   Perinci::Sub::GetArgs::Array: 0
+  Plack::Middleware::Auth::Basic: 0
   Plack::Runner: 0
   Riap: v1.1.10
   SHARYANTO::Array::Util: 0
@@ -43,4 +44,4 @@ requires:
 resources:
   homepage: http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
   repository: http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
-version: 0.29
+version: 0.30
