Import of SHARYANTO/Perinci-Access-HTTP-Server-0.31 from CPAN.
gitpan-cpan-distribution: Perinci-Access-HTTP-Server
gitpan-cpan-version:      0.31
gitpan-cpan-path:         SHARYANTO/Perinci-Access-HTTP-Server-0.31.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.30
+version=0.31
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -25,8 +25,9 @@ Log::Any=0
 SHARYANTO::Array::Util=0
 
 ;;for middleware PeriAHS::ParseRequest
-Perinci::Access=0.10
-Perinci::Access::InProcess=0.19
+Perinci::Access=0.36
+Perinci::Access::Perl=0.19
+Perinci::Access::Schemeless=0.19
 Perinci::Sub::GetArgs::Array=0
 ;!lint-prereqs assume-used # used via periwrap
 ;Perinci::Sub::Property::timeout=0
@@ -34,7 +35,7 @@ YAML::Syck=0
 URI::Escape=0
 
 ;;for middleware PeriAHS::CheckAccess
-URI=0
+URI::Split=0
 
 ;;for middleware PeriAHS::Respond
 Log::Any::Adapter=0
