--- a/META.yml
+++ b/META.yml
@@ -3,13 +3,14 @@ abstract: 'PSGI application to implement Riap::HTTP'
 author:
   - 'Steven Haryanto <stevenharyanto@gmail.com>'
 build_requires:
+  IO::Handle: 0
+  IPC::Open3: 0
   JSON: 0
-  Module::Build: 0.3601
   Test::More: 0.96
 configure_requires:
-  Module::Build: 0.3601
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.131560'
+generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.132510'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,9 +25,10 @@ requires:
   Log::Any::Adapter::Callback: 0.03
   Module::List: 0
   Module::Patch: 0.12
-  Perinci::Access: 0.10
+  Perinci::Access: 0.36
   Perinci::Access::HTTP::Client: 0.07
-  Perinci::Access::InProcess: 0.19
+  Perinci::Access::Perl: 0.19
+  Perinci::Access::Schemeless: 0.19
   Perinci::CmdLine: 0
   Perinci::Examples: 0
   Perinci::Gen::ForModule: 0
@@ -37,11 +39,11 @@ requires:
   Riap: v1.1.10
   SHARYANTO::Array::Util: 0
   Starman: 0
-  URI: 0
   URI::Escape: 0
+  URI::Split: 0
   YAML::Syck: 0
   perl: 5.010001
 resources:
   homepage: http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
   repository: http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
-version: 0.30
+version: 0.31
