--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.31
+version=0.32
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -10,6 +10,7 @@ homepage=http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
 repository=http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs/ TestRequires]
 JSON=0
@@ -25,6 +26,7 @@ Log::Any=0
 SHARYANTO::Array::Util=0
 
 ;;for middleware PeriAHS::ParseRequest
+Data::Clean::FromJSON=0.11
 Perinci::Access=0.36
 Perinci::Access::Perl=0.19
 Perinci::Access::Schemeless=0.19
