--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140'
+generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.132510'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -46,6 +46,7 @@ requires:
   YAML::Syck: 0
   perl: 5.010001
 resources:
-  homepage: http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
-  repository: http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
-version: 0.32
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Perinci-Access-HTTP-Server
+  homepage: https://metacpan.org/release/Perinci-Access-HTTP-Server
+  repository: git://github.com/sharyanto/perl-Perinci-Access-HTTP-Server.git
+version: 0.33
