--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.32
+version=0.33
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -6,10 +6,10 @@ license=Perl_5
 copyright_holder=Steven Haryanto
 
 [MetaResources]
-homepage=http://search.cpan.org/dist/Perinci-Access-HTTP-Server/
-repository=http://github.com/sharyanto/perl-Perinci-Access-HTTP-Server
 
-[@SHARYANTO]
+
+
+[@Author::SHARYANTO]
 :version=0.09
 
 [Prereqs/ TestRequires]
