--- a/META.yml
+++ b/META.yml
@@ -3,135 +3,135 @@ abstract: 'PSGI application to implement Riap::HTTP'
 author:
   - 'Steven Haryanto <stevenharyanto@gmail.com>'
 build_requires:
-  File::Spec: 0
-  IO::Handle: 0
-  IPC::Open3: 0
-  JSON: 0
-  Test::More: 0.96
+  File::Spec: '0'
+  IO::Handle: '0'
+  IPC::Open3: '0'
+  JSON: '0'
+  Test::More: '0.96'
 configure_requires:
-  ExtUtils::MakeMaker: 6.30
+  ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.006, CPAN::Meta::Converter version 2.132510'
+generated_by: 'Dist::Zilla version 5.013, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Perinci-Access-HTTP-Server
 requires:
-  Data::Clean::FromJSON: 0.11
-  File::HomeDir: 0
-  File::Write::Rotate: 0
-  Gepok: 0
-  Log::Any: 0
-  Log::Any::Adapter: 0
-  Log::Any::Adapter::Callback: 0.03
-  Module::List: 0
-  Module::Patch: 0.12
-  Perinci::Access::HTTP::Client: 0.07
-  Perinci::Access::Schemeless: 0.56
-  Perinci::CmdLine: 0
-  Perinci::Examples: 0
-  Perinci::Gen::ForModule: 0
-  Perinci::Result::Format: 0.31
-  Perinci::Sub::GetArgs::Array: 0
-  Plack::Middleware::Auth::Basic: 0
-  Plack::Runner: 0
+  Data::Clean::FromJSON: '0.11'
+  File::HomeDir: '0'
+  File::Write::Rotate: '0'
+  Gepok: '0'
+  Log::Any: '0'
+  Log::Any::Adapter: '0'
+  Log::Any::Adapter::Callback: '0.03'
+  Module::List: '0'
+  Module::Patch: '0.12'
+  Perinci::Access::HTTP::Client: '0.14'
+  Perinci::Access::Schemeless: '0.56'
+  Perinci::CmdLine: '0'
+  Perinci::Examples: '0'
+  Perinci::Gen::ForModule: '0'
+  Perinci::Result::Format: '0.31'
+  Perinci::Sub::GetArgs::Array: '0'
+  Plack::Middleware::Auth::Basic: '0'
+  Plack::Runner: '0'
   Riap: v1.1.22
-  SHARYANTO::Array::Util: 0
-  Starman: 0
-  URI::Escape: 0
-  URI::Split: 0
-  YAML::Syck: 0
-  perl: 5.010001
+  SHARYANTO::Array::Util: '0'
+  Starman: '0'
+  URI::Escape: '0'
+  URI::Split: '0'
+  YAML::Syck: '0'
+  perl: '5.010001'
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Perinci-Access-HTTP-Server
   homepage: https://metacpan.org/release/Perinci-Access-HTTP-Server
   repository: git://github.com/sharyanto/perl-Perinci-Access-HTTP-Server.git
-version: 0.36
+version: '0.37'
 x_Dist_Zilla:
   perl:
-    version: 5.010001
+    version: '5.018002'
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Author::SHARYANTO/@Filter/GatherDir'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::SHARYANTO/@Filter/PruneCruft'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::SHARYANTO/@Filter/ManifestSkip'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::SHARYANTO/@Filter/MetaYAML'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::SHARYANTO/@Filter/License'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::SHARYANTO/@Filter/PodCoverageTests'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::SHARYANTO/@Filter/PodSyntaxTests'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Author::SHARYANTO/@Filter/ExtraTests'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::SHARYANTO/@Filter/ExecDir'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::SHARYANTO/@Filter/ShareDir'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Author::SHARYANTO/@Filter/MakeMaker'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::SHARYANTO/@Filter/Manifest'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::SHARYANTO/@Filter/ConfirmRelease'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::SHARYANTO/@Filter/UploadToCPAN'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::Author::SHARYANTO::MetaResources
       name: '@Author::SHARYANTO/Author::SHARYANTO::MetaResources'
-      version: 0.01
+      version: '0.01'
     -
       class: Dist::Zilla::Plugin::CheckChangeLog
       name: '@Author::SHARYANTO/CheckChangeLog'
-      version: 0.01
+      version: '0.01'
     -
       class: Dist::Zilla::Plugin::CheckMetaResources
       name: '@Author::SHARYANTO/CheckMetaResources'
-      version: 0.001
+      version: '0.001'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::SHARYANTO/MetaJSON'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::SHARYANTO/MetaConfig'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::OurPkgVersion
       name: '@Author::SHARYANTO/OurPkgVersion'
-      version: 0.005000
+      version: '0.005001'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -143,97 +143,97 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::EnsurePod5
               name: '@CorePrep/EnsurePod5'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Plugin::H1Nester
               name: '@CorePrep/H1Nester'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Name
               name: '@Author::SHARYANTO/Name'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Version
               name: '@Author::SHARYANTO/Version'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Region
               name: '@Author::SHARYANTO/prelude'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Generic
               name: SYNOPSIS
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Generic
               name: DESCRIPTION
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Generic
               name: OVERVIEW
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
               name: ATTRIBUTES
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
               name: METHODS
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
               name: FUNCTIONS
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Plugin::Perinci
               name: '@Author::SHARYANTO/Perinci'
-              version: 0.14
+              version: '0.14'
             -
               class: Pod::Weaver::Section::Leftovers
               name: '@Author::SHARYANTO/Leftovers'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Region
               name: '@Author::SHARYANTO/postlude'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Homepage::DefaultCPAN
               name: '@Author::SHARYANTO/Homepage::DefaultCPAN'
-              version: 0.02
+              version: '0.02'
             -
               class: Pod::Weaver::Section::Source::DefaultGitHub
               name: '@Author::SHARYANTO/Source::DefaultGitHub'
-              version: 0.04
+              version: '0.04'
             -
               class: Pod::Weaver::Section::Bugs::DefaultRT
               name: '@Author::SHARYANTO/Bugs::DefaultRT'
-              version: 0.03
+              version: '0.03'
             -
               class: Pod::Weaver::Section::Authors
               name: '@Author::SHARYANTO/Authors'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Section::Legal
               name: '@Author::SHARYANTO/Legal'
-              version: 4.004
+              version: '4.006'
             -
               class: Pod::Weaver::Plugin::EnsureUniqueSections
               name: '@Author::SHARYANTO/EnsureUniqueSections'
-              version: 0.121550
+              version: '0.121550'
             -
               class: Pod::Weaver::Plugin::SingleEncoding
               name: '@Author::SHARYANTO/SingleEncoding'
-              version: 4.004
+              version: '4.006'
       name: '@Author::SHARYANTO/PodWeaver'
-      version: 4.002
+      version: '4.005'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::SHARYANTO/ReadmeFromPod'
-      version: 0.18
+      version: '0.21'
     -
       class: Dist::Zilla::Plugin::Rinci::Validate
       name: '@Author::SHARYANTO/Rinci::Validate'
-      version: 0.11
+      version: '0.11'
     -
       class: Dist::Zilla::Plugin::Test::Compile
       config:
@@ -244,23 +244,19 @@ x_Dist_Zilla:
           script_finder:
             - ':ExecFiles'
       name: '@Author::SHARYANTO/Test::Compile'
-      version: 2.037
+      version: '2.039'
     -
       class: Dist::Zilla::Plugin::Test::Rinci
       name: '@Author::SHARYANTO/Test::Rinci'
-      version: 0.01
-    -
-      class: Dist::Zilla::Plugin::InstallRelease
-      name: '@Author::SHARYANTO/InstallRelease'
-      version: 0.008
+      version: '0.01'
     -
       class: Dist::Zilla::Plugin::Run::BeforeBuild
       name: '@Author::SHARYANTO/Run::BeforeBuild'
-      version: 0.020
+      version: '0.020'
     -
       class: Dist::Zilla::Plugin::Run::Release
       name: '@Author::SHARYANTO/Run::Release'
-      version: 0.020
+      version: '0.020'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -268,7 +264,7 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: TestRequires
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -276,37 +272,45 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::Extras
       name: 'lint-prereqs / assume-provided'
-      version: 0.01
+      version: '0.01'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 5.006
+      version: '5.013'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 5.006
+      version: '5.013'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':AllFiles'
+      version: '5.013'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':NoFiles'
+      version: '5.013'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: 0
-    version: 5.006
+      is_trial: '0'
+    version: '5.013'
