Import of SHARYANTO/Perinci-Access-HTTP-Server-0.47 from CPAN.
gitpan-cpan-distribution: Perinci-Access-HTTP-Server
gitpan-cpan-version:      0.47
gitpan-cpan-path:         SHARYANTO/Perinci-Access-HTTP-Server-0.47.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.46
+version=0.47
 
 name=Perinci-Access-HTTP-Server
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -34,6 +34,7 @@ URI::Escape=0
 URI::Split=0
 
 ;;for middleware PeriAHS::Respond
+Data::Clean::JSON=0
 Log::Any::Adapter=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs, used via Log::Any::Adapter
 Log::Any::Adapter::Callback=0.03
