Import of PERLANCAR/Perinci-Access-HTTP-Server-0.51 from CPAN.
gitpan-cpan-distribution: Perinci-Access-HTTP-Server
gitpan-cpan-version:      0.51
gitpan-cpan-path:         PERLANCAR/Perinci-Access-HTTP-Server-0.51.tar.gz
gitpan-cpan-author:       PERLANCAR
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,8 @@
-version=0.50
+version=0.51
 
 name=Perinci-Access-HTTP-Server
-author=Steven Haryanto <stevenharyanto@gmail.com>
-license=Perl_5
-copyright_holder=Steven Haryanto
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs/ TestRequires]
@@ -13,6 +10,8 @@ JSON=0
 Test::More=0.96
 
 [Prereqs]
+;!lint-prereqs assume-used # spec
+Rinci=1.1.0
 ;!lint-prereqs assume-used # spec
 Riap=1.1.22
 
@@ -23,9 +22,9 @@ SHARYANTO::Array::Util=0
 
 ;;for middleware PeriAHS::ParseRequest
 Data::Clean::FromJSON=0.11
-Perinci::Access::Schemeless=0.56
+Perinci::Access::Schemeless=0.71
 ;!lint-prereqs assume-used # force version
-Perinci::Sub::GetArgs::Argv=0.35
+Perinci::Sub::GetArgs::Argv=0.46
 Perinci::Sub::GetArgs::Array=0
 ;!lint-prereqs assume-used # used via periwrap
 ;Perinci::Sub::Property::timeout=0
