--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'PSGI application to implement Riap::HTTP'
 author:
-  - 'Steven Haryanto <stevenharyanto@gmail.com>'
+  - 'perlancar <perlancar@cpan.org>'
 build_requires:
   File::Spec: '0'
   IO::Handle: '0'
@@ -30,16 +30,17 @@ requires:
   Module::List: '0'
   Module::Patch: '0.12'
   Perinci::Access::HTTP::Client: '0.14'
-  Perinci::Access::Schemeless: '0.56'
+  Perinci::Access::Schemeless: '0.71'
   Perinci::CmdLine::Any: '0'
   Perinci::Examples: '0'
   Perinci::Gen::ForModule: '0'
   Perinci::Result::Format: '0.31'
-  Perinci::Sub::GetArgs::Argv: '0.35'
+  Perinci::Sub::GetArgs::Argv: '0.46'
   Perinci::Sub::GetArgs::Array: '0'
   Plack::Middleware::Auth::Basic: '0'
   Plack::Runner: '0'
   Riap: v1.1.22
+  Rinci: v1.1.0
   SHARYANTO::Array::Util: '0'
   Starman: '0'
   URI::Escape: '0'
@@ -50,93 +51,93 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Perinci-Access-HTTP-Server
   homepage: https://metacpan.org/release/Perinci-Access-HTTP-Server
   repository: git://github.com/sharyanto/perl-Perinci-Access-HTTP-Server.git
-version: '0.50'
+version: '0.51'
 x_Dist_Zilla:
   perl:
     version: '5.018001'
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
-      name: '@Author::SHARYANTO/@Filter/GatherDir'
+      name: '@Author::PERLANCAR/@Filter/GatherDir'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::PruneCruft
-      name: '@Author::SHARYANTO/@Filter/PruneCruft'
+      name: '@Author::PERLANCAR/@Filter/PruneCruft'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::ManifestSkip
-      name: '@Author::SHARYANTO/@Filter/ManifestSkip'
+      name: '@Author::PERLANCAR/@Filter/ManifestSkip'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::MetaYAML
-      name: '@Author::SHARYANTO/@Filter/MetaYAML'
+      name: '@Author::PERLANCAR/@Filter/MetaYAML'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::License
-      name: '@Author::SHARYANTO/@Filter/License'
+      name: '@Author::PERLANCAR/@Filter/License'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
-      name: '@Author::SHARYANTO/@Filter/PodCoverageTests'
+      name: '@Author::PERLANCAR/@Filter/PodCoverageTests'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
-      name: '@Author::SHARYANTO/@Filter/PodSyntaxTests'
+      name: '@Author::PERLANCAR/@Filter/PodSyntaxTests'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::ExtraTests
-      name: '@Author::SHARYANTO/@Filter/ExtraTests'
+      name: '@Author::PERLANCAR/@Filter/ExtraTests'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::ExecDir
-      name: '@Author::SHARYANTO/@Filter/ExecDir'
+      name: '@Author::PERLANCAR/@Filter/ExecDir'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::ShareDir
-      name: '@Author::SHARYANTO/@Filter/ShareDir'
+      name: '@Author::PERLANCAR/@Filter/ShareDir'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::MakeMaker
       config:
         Dist::Zilla::Role::TestRunner:
           default_jobs: 1
-      name: '@Author::SHARYANTO/@Filter/MakeMaker'
+      name: '@Author::PERLANCAR/@Filter/MakeMaker'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::Manifest
-      name: '@Author::SHARYANTO/@Filter/Manifest'
+      name: '@Author::PERLANCAR/@Filter/Manifest'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
-      name: '@Author::SHARYANTO/@Filter/ConfirmRelease'
+      name: '@Author::PERLANCAR/@Filter/ConfirmRelease'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
-      name: '@Author::SHARYANTO/@Filter/UploadToCPAN'
+      name: '@Author::PERLANCAR/@Filter/UploadToCPAN'
       version: '5.015'
     -
-      class: Dist::Zilla::Plugin::Author::SHARYANTO::MetaResources
-      name: '@Author::SHARYANTO/Author::SHARYANTO::MetaResources'
-      version: '0.01'
+      class: Dist::Zilla::Plugin::PERLANCAR::MetaResources
+      name: '@Author::PERLANCAR/PERLANCAR::MetaResources'
+      version: '0.03'
     -
       class: Dist::Zilla::Plugin::CheckChangeLog
-      name: '@Author::SHARYANTO/CheckChangeLog'
+      name: '@Author::PERLANCAR/CheckChangeLog'
       version: '0.01'
     -
       class: Dist::Zilla::Plugin::CheckMetaResources
-      name: '@Author::SHARYANTO/CheckMetaResources'
+      name: '@Author::PERLANCAR/CheckMetaResources'
       version: '0.001'
     -
       class: Dist::Zilla::Plugin::MetaJSON
-      name: '@Author::SHARYANTO/MetaJSON'
+      name: '@Author::PERLANCAR/MetaJSON'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::MetaConfig
-      name: '@Author::SHARYANTO/MetaConfig'
+      name: '@Author::PERLANCAR/MetaConfig'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::OurDate
-      name: '@Author::SHARYANTO/OurDate'
+      name: '@Author::PERLANCAR/OurDate'
       version: '0.01'
     -
       class: Dist::Zilla::Plugin::PodWeaver
@@ -156,15 +157,15 @@ x_Dist_Zilla:
               version: '4.006'
             -
               class: Pod::Weaver::Section::Name
-              name: '@Author::SHARYANTO/Name'
+              name: '@Author::PERLANCAR/Name'
               version: '4.006'
             -
               class: Pod::Weaver::Section::Version
-              name: '@Author::SHARYANTO/Version'
+              name: '@Author::PERLANCAR/Version'
               version: '4.006'
             -
               class: Pod::Weaver::Section::Region
-              name: '@Author::SHARYANTO/prelude'
+              name: '@Author::PERLANCAR/prelude'
               version: '4.006'
             -
               class: Pod::Weaver::Section::Generic
@@ -192,62 +193,66 @@ x_Dist_Zilla:
               version: '4.006'
             -
               class: Pod::Weaver::Plugin::Perinci
-              name: '@Author::SHARYANTO/Perinci'
+              name: '@Author::PERLANCAR/Perinci'
               version: '0.15'
             -
               class: Pod::Weaver::Section::Leftovers
-              name: '@Author::SHARYANTO/Leftovers'
+              name: '@Author::PERLANCAR/Leftovers'
               version: '4.006'
             -
               class: Pod::Weaver::Section::Region
-              name: '@Author::SHARYANTO/postlude'
+              name: '@Author::PERLANCAR/postlude'
               version: '4.006'
             -
               class: Pod::Weaver::Section::Homepage::DefaultCPAN
-              name: '@Author::SHARYANTO/Homepage::DefaultCPAN'
+              name: '@Author::PERLANCAR/Homepage::DefaultCPAN'
               version: '0.02'
             -
               class: Pod::Weaver::Section::Source::DefaultGitHub
-              name: '@Author::SHARYANTO/Source::DefaultGitHub'
+              name: '@Author::PERLANCAR/Source::DefaultGitHub'
               version: '0.04'
             -
               class: Pod::Weaver::Section::Bugs::DefaultRT
-              name: '@Author::SHARYANTO/Bugs::DefaultRT'
+              name: '@Author::PERLANCAR/Bugs::DefaultRT'
               version: '0.03'
             -
               class: Pod::Weaver::Section::Authors
-              name: '@Author::SHARYANTO/Authors'
+              name: '@Author::PERLANCAR/Authors'
               version: '4.006'
             -
               class: Pod::Weaver::Section::Legal
-              name: '@Author::SHARYANTO/Legal'
+              name: '@Author::PERLANCAR/Legal'
               version: '4.006'
             -
               class: Pod::Weaver::Plugin::EnsureUniqueSections
-              name: '@Author::SHARYANTO/EnsureUniqueSections'
+              name: '@Author::PERLANCAR/EnsureUniqueSections'
               version: '0.121550'
             -
               class: Pod::Weaver::Plugin::SingleEncoding
-              name: '@Author::SHARYANTO/SingleEncoding'
+              name: '@Author::PERLANCAR/SingleEncoding'
               version: '4.006'
-      name: '@Author::SHARYANTO/PodWeaver'
+      name: '@Author::PERLANCAR/PodWeaver'
       version: '4.005'
     -
       class: Dist::Zilla::Plugin::PruneFiles
-      name: '@Author::SHARYANTO/PruneFiles'
+      name: '@Author::PERLANCAR/PruneFiles'
       version: '5.015'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
-      name: '@Author::SHARYANTO/ReadmeFromPod'
+      name: '@Author::PERLANCAR/ReadmeFromPod'
       version: '0.21'
     -
       class: Dist::Zilla::Plugin::Rinci::Validate
-      name: '@Author::SHARYANTO/Rinci::Validate'
+      name: '@Author::PERLANCAR/Rinci::Validate'
       version: '0.13'
     -
-      class: Dist::Zilla::Plugin::SHARYANTO::OurPkgVersion
-      name: '@Author::SHARYANTO/SHARYANTO::OurPkgVersion'
-      version: '0.02'
+      class: Dist::Zilla::Plugin::SetScriptShebang
+      name: '@Author::PERLANCAR/SetScriptShebang'
+      version: '0.01'
+    -
+      class: Dist::Zilla::Plugin::PERLANCAR::OurPkgVersion
+      name: '@Author::PERLANCAR/PERLANCAR::OurPkgVersion'
+      version: '0.03'
     -
       class: Dist::Zilla::Plugin::Test::Compile
       config:
@@ -257,11 +262,11 @@ x_Dist_Zilla:
             - ':InstallModules'
           script_finder:
             - ':ExecFiles'
-      name: '@Author::SHARYANTO/Test::Compile'
+      name: '@Author::PERLANCAR/Test::Compile'
       version: '2.039'
     -
       class: Dist::Zilla::Plugin::Test::Rinci
-      name: '@Author::SHARYANTO/Test::Rinci'
+      name: '@Author::PERLANCAR/Test::Rinci'
       version: '0.01'
     -
       class: Dist::Zilla::Plugin::Prereqs
